tests/typing/fail/block_ret_fail.rb

def f()
  yield +  2
end

f() { true }
